database and migration changes

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: prioritizer_production
-  username: prioritizer
+#  username: prioritizer
   password: <%= ENV['PRIORITIZER_DATABASE_PASSWORD'] %>
