redid slider js to use attr not data; reformatted main form

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
     "name": "bower-rails generated vendor assets",
     "dependencies": {
       "bootstrap-sass-official": "~3.3",
+      "bootstrap-datepicker": "~1.6",
       "font-awesome": "~4.0.3",
       "jquery-ui": "~1.11",
       "jquery": "~2.1",
