clockpicker and shortcuts

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "dependencies": {
       "bootstrap-sass-official": "~3.3",
       "bootstrap-datepicker": "~1.6",
+      "clockpicker": "~0.0.7",
       "font-awesome": "~4.0.3",
       "jquery-ui": "~1.11",
       "jquery": "~2.1",
