--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "dependencies": {
     "bower": "latest"
   },
-  "engines": {
-    "node": "0.10.x"
+  "engine": {
+    "node": "0.12.x",
+    "npm": "3.1.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "bower install"
   },
   "scripts_disabled": {
+    "start": "node index.js",
     "postinstall": "rake bower:install",
     "postinstall2": "bower install",
     "postinstall3": "rake bower:install; rake bower:resolve"
