in the middle of attempt to convert to webpack

--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,9 @@ node_modules
 # jekyll:
 _site
 _sites
+# React on Rails
+npm-debug.log*
+node_modules
+
+# Generated js bundles
+/app/assets/webpack/*
