--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
 
     "bootstrap-sass": "~3.3",
     "bootstrap-datepicker": "~1.6",
-    "jquery-timepicker": "1.3.5",
+    "jquery-timepicker": "~1.3",
     "font-awesome": "~4.0.3",
     "jquery-ui": "~1.12",
     "jquery": "~2.1",
