--- a/client/package.json
+++ b/client/package.json
@@ -8,46 +8,54 @@
   "scripts": {
     "build:test": "webpack --config webpack.config.js",
     "build:production": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:development": "webpack -w --config webpack.config.js"
+    "build:development": "webpack --config webpack.config.js"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"],
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
   "dependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
-    "babel-runtime": "^6.6.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.6.1",
+    "bootstrap-datepicker": "~1.6",
+    "bootstrap-loader": "*",
+    "bootstrap-sass": "~3.3",
+    "clean-webpack-plugin": "^0.1.3",
+    "css-loader": "^0.16.0",
+    "css-loader": "^0.25.0",
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "~1.0",
+    "file-loader": "^0.8.4",
+    "font-awesome": "~4.0.3",
+    "hammerjs": "~2.0",
+    "html-webpack-plugin": "^1.6.1",
     "imports-loader": "^0.6.5",
+    "jquery": "~2.1",
+    "jquery-timepicker": "~1.3",
+    "jquery-ui": "~1.12",
+    "jquery-ujs": "*",
+    "letterify": "~1.0",
+    "lodash": "~3.7",
+    "mousetrap": "~1.6",
+    "node-sass": "^3.11.1",
     "react": "^0.14.8 || ^15.0.0",
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "6.1.2",
-    "webpack": "^1.12.14",
-
-    "clean-webpack-plugin": "^0.1.3",
-    "css-loader": "^0.16.0",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.6.1",
-    "style-loader": "^0.12.3",
-
-    "bootstrap-sass": "~3.3",
-    "bootstrap-datepicker": "~1.6",
-    "jquery-timepicker": "~1.3",
-    "font-awesome": "~4.0.3",
-    "jquery-ui": "~1.12",
-    "jquery": "~2.1",
-    "jquery-ujs": "*",
-    "hammerjs": "~2.0",
-    "letterify": "~1.0",
-    "lodash": "~3.7",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.2",
     "select2": "4.0.3",
-    "mousetrap": "~1.6"
+    "style-loader": "^0.12.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "~1.12"
   },
   "devDependencies": {
   }
