--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
   },
   "disabledscripts": {
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev"
+  },
+  "devDependencies": {
   }
 }
