--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,8 @@
     "react-bootstrap": "^0.30.6",
     "react-dom": "^0.14.8 || ^15.0.0",
     "resolve-url-loader": "^1.6.0",
-    "select2": "4.0.3"
+    "select2": "4.0.3",
+    "webpack": "~1.12"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
@@ -56,7 +57,6 @@
     "react-on-rails": "6.1.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "~1.12"
+    "url-loader": "^0.5.7"
   }
 }
