--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
@@ -27,12 +28,15 @@
     "bootstrap-datepicker": "~1.6",
     "bootstrap-sass": "~3.3",
     "clean-webpack-plugin": "^0.1.3",
+    "css-loader": "^0.25.0",
     "es5-shim": "^4.5.7",
+    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "~1.0",
     "file-loader": "^0.8.4",
     "font-awesome": "~4.0.3",
     "hammerjs": "~2.0",
     "html-webpack-plugin": "^1.6.1",
+    "imports-loader": "^0.6.5",
     "jquery": "~2.1",
     "jquery-timepicker": "~1.3",
     "jquery-ui": "~1.12",
@@ -46,17 +50,12 @@
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "6.1.2",
     "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.2",
     "select2": "4.0.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "~1.12"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "bootstrap-loader": "*",
-    "css-loader": "^0.25.0",
-    "expose-loader": "^0.7.1",
-    "imports-loader": "^0.6.5",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7"
   }
 }
