--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-bootstrap": "^0.30.6",
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "6.1.2",
+    "react-router": "^3.0.0",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
     "select2": "4.0.3",
@@ -56,6 +57,5 @@
     "url-loader": "^0.5.7",
     "webpack": "~1.12"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
