--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "jquery-timepicker": "~1.3",
     "jquery-ui": "~1.12",
     "jquery-ujs": "*",
+    "letteringjs": "git://github.com/sjelfull-forks/Lettering.js",
     "letterify": "~1.0",
     "lodash": "~3.7",
     "mousetrap": "~1.6",
