--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "client/node_modules"
   ],
   "dependencies": {
+    "axios": "^0.15.2",
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
@@ -41,8 +42,8 @@
     "jquery-timepicker": "~1.3",
     "jquery-ui": "~1.12",
     "jquery-ujs": "*",
-    "letteringjs": "git://github.com/sjelfull-forks/Lettering.js",
     "letterify": "~1.0",
+    "letteringjs": "git://github.com/sjelfull-forks/Lettering.js",
     "lodash": "~3.7",
     "mousetrap": "~1.6",
     "node-sass": "^3.11.1",
