got react-select working

--- a/client/package.json
+++ b/client/package.json
@@ -48,11 +48,12 @@
     "mousetrap": "~1.6",
     "node-sass": "^3.11.1",
     "react": "^0.14.8 || ^15.0.0",
+    "react-addons-css-transition-group": "*",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^0.14.8 || ^15.0.0",
-    "react-addons-css-transition-group": "*",
     "react-on-rails": "6.1.2",
     "react-router": "^3.0.0",
+    "react-select": "^1.0.0-rc.2",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
     "select2": "4.0.3",
