--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "~1.0",
     "file-loader": "^0.8.4",
-    "font-awesome": "~4.0.3",
+    "font-awesome": "~4.2",
     "hammerjs": "~2.0",
     "html-webpack-plugin": "^1.6.1",
     "imports-loader": "^0.6.5",
@@ -51,6 +51,7 @@
     "react-addons-css-transition-group": "*",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^0.14.8 || ^15.0.0",
+    "react-flip-move": "^2.7.1",
     "react-on-rails": "6.1.2",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
